--- a/body.tex
+++ b/body.tex
@@ -61,8 +61,6 @@ Thus:
 % We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
 % Teams have been added as extra rows with an extra column for delineation, but there might be a better presentation format.
 
-\begin{center}
-
 \begin{longtable}[]{@{}lll@{}}
 \caption{The level 2 and level 3 elements of the Rubin Operations work breakdown structure}
 \hline
@@ -116,8 +114,7 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 
 \end{longtable}
 % footnote text
-\footnotetext[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
-\end{center}
+\tablefootnote[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
 
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
