--- a/body.tex
+++ b/body.tex
@@ -113,7 +113,8 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 \hline
 
 % footnote text
-\footnotetext[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
+% \footnotetext[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
+
 \end{longtable}
 
 %\subsection{The Control Account Manager}
