--- a/body.tex
+++ b/body.tex
@@ -62,7 +62,7 @@ Thus:
 % Teams have been added as extra rows with an extra column for delineation, but there might be a better presentation format.
 
 \begin{longtable}[]{@{}lll@{}}
-\caption{The level 2 and level 3 elements of the Rubin Operations work breakdown structure}
+% \caption{The level 2 and level 3 elements of the Rubin Operations work breakdown structure}
 \hline
 L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 \hline
