--- a/body.tex
+++ b/body.tex
@@ -72,7 +72,7 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
   & 1.1 & Director's Office  \tabularnewline
   & 1.2 & Safety  \tabularnewline
   & 1.3 & Program Operations  \tabularnewline
-%  & 1.3.1 & Program Operations  \tabularnewline
+%  & 1.3.1 & Program Operations\footnotemark[1]  \tabularnewline
 %  & 1.3.2 & Administrative Operations  \tabularnewline
 %  & 1.3.3 & Portfolio Management  \tabularnewline
 %  & 1.3.4 & Communications  \tabularnewline
@@ -109,12 +109,9 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
   & 5.2 & EPO Technical  \tabularnewline
   & 5.3 & Education  \tabularnewline
   & 5.4 & Outreach  \tabularnewline
-
-\hline
-
 % footnote text
 \footnotetext[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
-
+\hline
 \end{longtable}
 
 %\subsection{The Control Account Manager}
