--- a/body.tex
+++ b/body.tex
@@ -15,7 +15,10 @@ and other incremental work needed to produce the annual data releases.
 
 In this document, we lay out the procedural details for how we define and carry out annual plans, effectively track work progress to ensure delivery of milestones, maintain visibility in our workflows, remain responsive to change, and offer staff the ability to innovate and collaborate.
 
-\section{Rubin Operations Leadership and Annual Reporting}
+\section{Organizational Structure}
+\label{sec:structure}
+
+\section{Rubin Operations Leadership}
 \label{sec:contacts}
 
 Rubin Observatory is a Program of NSF's NOIRLab.
@@ -28,6 +31,12 @@ They assist in developing the annual Program Operating Plan (POP), tracking mile
 
 On the SLAC side, Christine Soldahl is the Business Manager who handles similar tasks.
 
+Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach).
+Each operational Department is led by an Associate Director (AD).
+
+\subsection{Annual Reporting}
+\label{sec:reporting}
+
 The POP is a defined report and process for NOIRLab.
 Rubin Operations considers the POP to be a Rubin activity, which informs both NOIRLab and SLAC leadership of the annual Rubin activity including milestones and budget.
 For NOIRLab, the Rubin POP is integrated and delivered to NSF for the next fiscal year at the end of the current fiscal year.
@@ -38,12 +47,6 @@ The FWP is previewed to SLAC management and DOE in February in advance of the fi
 Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level planning in early Q2 of the financial year (January and February).
 Detailed activity planning, including defining smaller chunks of work as lower level milestones, continues though the year in advance of the next year.
 This detailed activity planning is the subject of this document.
-
-\section{Organizational Structure}
-\label{sec:structure}
-
-Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach).
-Each operational Department is led by an Associate Director (AD).
 
 \subsection{Work Breakdown Structure}
 \label{sec:wbs}
