--- a/body.tex
+++ b/body.tex
@@ -18,7 +18,7 @@ In this document, we lay out the procedural details for how we define and carry 
 \section{Organizational Structure}
 \label{sec:structure}
 
-\section{Rubin Operations Leadership}
+\subsection{Rubin Operations Leadership}
 \label{sec:contacts}
 
 Rubin Observatory is a Program of NSF's NOIRLab.
