--- a/aglossary.tex
+++ b/aglossary.tex
@@ -49,7 +49,7 @@
 \newacronym{IAU} {IAU} {International Astronomical Union}
 \newacronym{IDF} {IDF} {Interim Data Facility}
 \newacronym{IT} {IT} {Information Technology}
-\newglossaryentry{JIRA} {name={Jira}, description={issue tracking product (not an acronym but a truncation of Gojira the Japanese name for Godzilla)}}
+\newglossaryentry{JIRA} {name={JIRA}, description={issue tracking product (not an acronym but a truncation of Gojira the Japanese name for Godzilla)}}
 \newacronym{JIT} {JIT} {Just In Time}
 \newacronym{L1} {L1} {Lens 1}
 \newacronym{L2} {L2} {Lens 2}
