--- a/body.tex
+++ b/body.tex
@@ -5,7 +5,7 @@ This document provides a guide to the \VRO \   approach to annual planning.
 See also the the operations proposal \citeds{RDO-018}.
 In operations, there is no formal \gls{EVMS} required from the funding Agencies so a schedule is planned in detail on an annual basis and effort towards that schedule is tracked through a level of effort process.
 
-The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system. The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  Teams record their day to day work in Jira and overall progress is monitored automatically through Smartsheet and reported through our managing organizations.
+The annual planning process starts by setting high level Milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system. The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  Teams record their day to day work in \gls{JIRA} and overall progress is monitored automatically through Smartsheet and reported through our managing organizations.
 
 There are a few main ways work will be managed, some within an Agile framework (particularly for data release planning).
 The Agile method is a set of practices that allow the ability to adapt and respond to change through collaboration between self-managing, cross-functional teams.
@@ -17,7 +17,7 @@ as well as iteratively responding to user feedback on a longer timescale to maxi
 
 Some examples that will use the kanban style are the daily functionality checks needed for nightly operations of the telescope or the regular monitoring of progress toward achieving milestones and reporting to governing organizations.
 For either of these examples, we will maintain a set of tasks that need to be performed in sequence every cycle.
-Each task could be described individually inside a JIRA ticket and grouped together in a set, so that any person doing the daily checks, for example, could be assigned the set of tasks, open the tickets, comment on results, pass additional work onto others as needed, and mark the tickets done as the work is completed.
+Each task could be described individually inside a \gls{JIRA} ticket and grouped together in a set, so that any person doing the daily checks, for example, could be assigned the set of tasks, open the tickets, comment on results, pass additional work onto others as needed, and mark the tickets done as the work is completed.
 In this way, the completion of the checklist of tasks is transparent and traceable and can be monitored, and the efficiency of the steps in the flow of work can be improved upon continuously.
 
 Examples of scrum-like work include improving algorithms in response to the user community feedback, optimizing the observing strategy as the survey progresses, and other incremental work needed to produce the annual data releases.
