--- a/body.tex
+++ b/body.tex
@@ -182,7 +182,7 @@ It is actively encouraged to allocate less than 30\% of an individuals time to \
 Assuming no variation throughout the year, we therefore expect 105 hours of productive work from a developer, or 84 hours from a scientist, per month.
 Note that this is averaged across the year: some months, such as those containing major holidays, will naturally involve less working time than others: the remainder will necessarily include more working time to compensate. For other staff, the \gls{LOE} will be higher but include much more day to day activity than for the developer case.
 
-Rather than working in hours, our Jira based system uses Story Points (\gls{SP}), with one \gls{SP} being defined as equivalent to four hours of effort (half a day's work) by a competent developer.
+Rather than working in hours, our \gls{JIRA} based system uses Story Points (\gls{SP}), with one \gls{SP} being defined as equivalent to four hours of effort (half a day's work) by a competent developer.
 
 Thus, we expect developers and scientists to produce 26.25 and 21 \glspl{SP} per \emph{average} month respectively.
 
@@ -282,11 +282,11 @@ carefully controlled.
 
 \subsection{Defining the Schedule with Milestones}
 
-Rubin Milestones are defined as Jira issues of type ``Milestone''. As indicated above, the Director (or their designate) defines the L1 milestones, the Associate Directors (ADs) define their departments' L2 milestones, and the Team Leaders and ADs define the L3 milestones for their teams.
+Rubin Milestones are defined as \gls{JIRA} issues of type ``Milestone''. As indicated above, the Director (or their designate) defines the L1 milestones, the Associate Directors (ADs) define their departments' L2 milestones, and the Team Leaders and ADs define the L3 milestones for their teams.
 
-L1, L2 and most L3 milestones are defined as part of the annual planning cycle, and prior to the year in which the work associated with them is due to be carried out. ADs and Team Leaders communicate their milestones to the Program Coordinator, who enters them into Smartsheet and then creates a Jira issue of type ``milestone'' for each one.
+L1, L2 and most L3 milestones are defined as part of the annual planning cycle, and prior to the year in which the work associated with them is due to be carried out. ADs and Team Leaders communicate their milestones to the Program Coordinator, who enters them into Smartsheet and then creates a \gls{JIRA} issue of type ``milestone'' for each one.
 
-During the year, it is sometimes necessary to create new milestones (primarily at Level 3) that were omitted during the earlier planning phase. In this case, the team leader or AD may create the Jira milestone directly, and alert the Program Coordinator to it for inclusion in the Smartsheet.
+During the year, it is sometimes necessary to create new milestones (primarily at Level 3) that were omitted during the earlier planning phase. In this case, the team leader or AD may create the \gls{JIRA} milestone directly, and alert the Program Coordinator to it for inclusion in the Smartsheet.
 
 The following fields must be filled out when defining a new milestone:
 \begin{itemize}
@@ -315,7 +315,7 @@ The Program Coordinators will ensure that the milestones that have been defined 
 \section{Short Term Planning} \label{sec:cycle-plan}
 
 Short term planning is carried out in blocks referred to as \glspl{cycle}, which (usually) last for six months.
-Before the start of a \gls{cycle}, milestones are confirmed by the Director's Office, listed in Smartsheet, and detailed in the Milestone issue. Any team member can find the milestones in Jira.
+Before the start of a \gls{cycle}, milestones are confirmed by the Director's Office, listed in Smartsheet, and detailed in the Milestone issue. Any team member can find the milestones in \gls{JIRA}.
 
 \subsection{Defining The Plan}
 
