--- a/body.tex
+++ b/body.tex
@@ -25,13 +25,13 @@ Rubin Observatory is a Program of NSF's NOIRLab.
 The Rubin Observatory \ \gls{Director} is Robert Blum, the Deputy \gls{Director} for NOIRLab is Amanda Bauer, and the Deputy \gls{Director} for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO Operations.
 
-The Head of Operations is Ranpal Gil and the Program Coordinator is Cathy Petry.
-They monitor the budget and maintain details within the NOIRLab budgeting system.
+The Head of Operations is Ranpal Gill and the Program Coordinator is Cathy Petry.
+They monitor the budget and maintain details within the NOIRLab accounting system.
 They assist in developing the annual Program Operating Plan (POP), tracking milestones and reporting on progress.
 
 On the SLAC side, Christine Soldahl is the Business Manager who handles similar tasks.
 
-Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach).
+Rubin Operations has four operational Departments in addition to the RDO (Rubin Director’s Office): ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach).
 Each operational Department is led by an Associate Director (AD).
 
 \subsection{Annual Reporting}
@@ -51,11 +51,10 @@ This detailed activity planning is the subject of this document.
 \subsection{Work Breakdown Structure}
 \label{sec:wbs}
 
-The \gls{WBS} provides a hierarchical description of the activity-based organization of Rubin.
-
-The WBS provides a useful structure to organize Rubin Operations and plan annual work around.
+The \gls{WBS} is a hierarchical description of Rubin Operations from an activity-based perspective.
+It provides a useful structure to organize Rubin Operations and plan annual work around.
 Rubin is level 1 of the WBS, the departments are level 2, and teams within the departments are level 3 and in the case of Program Operations, level 4.
-Individual roles on operations are defined at the lowest level.
+Individual roles in operations are defined at the lowest level.
 % In the Planning Google sheets there is no level 4 as there is in the budget table in the Proposal, but there is a direct mapping in that it's rolled up.  We can decide whether to change the google tools to match the proposal budget tables (will help later with reconcilation), or we can make the mapping clearly described.  Also, in Google sheets 1.10 and 1.11 are rolled into Program Operations, and they are separate elements in this table, and in the budget tables.
 
 
@@ -124,7 +123,7 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 
 Detailed work is planned in advance of each fiscal year at the team level.
 Team leads will work with department associate directors to develop plans for activities that address specific milestones, projects, and level of effort activity.
-The highest level milestones are reported regularly throughout the fiscal year to SLAC, AURA, NSF and DOE.
+Progress towards the highest level milestones is reported regularly throughout the fiscal year to SLAC, AURA, NSF and DOE.
 
 
 \subsection{Activity Types}
@@ -139,7 +138,7 @@ This may be particularly the case for technical managers or others in leadership
 In general, we strive to minimize the fraction of effort which is devoted to \gls{LOE} activities and favor those which are more directly accountable.
 However, in certain cases such as operations and maintenance of telescope and facility systems, pipelines or other systems, \gls{LOE} is perfectly acceptable.
 Technical staff in Chile at the summit facility may spend a much more significant fraction of time as \gls{LOE}.
-As an example, a first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is planned and tracked against concrete deliverables.
+As an example, a first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is planned and tracked against well-defined deliverables.
 
 
 \section{Estimating Effort}
