--- a/body.tex
+++ b/body.tex
@@ -22,7 +22,7 @@ In this document, we lay out the procedural details for how we define and carry 
 \label{sec:contacts}
 
 Rubin Observatory is a Program of NSF's NOIRLab.
-The Rubin Observatory \ \gls{Director} is Robert Blum, the Deputy \gls{Director} for NOIRLab is Amanda Bauer, and the Deputy \gls{Director} for SLAC is Phil Marshall.
+The Rubin Observatory \gls{Director} is Robert Blum, the Deputy \gls{Director} for NOIRLab is Amanda Bauer, and the Deputy \gls{Director} for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO Operations.
 
 The Head of Operations is Ranpal Gill and the Program Coordinator is Cathy Petry.
