--- a/body.tex
+++ b/body.tex
@@ -63,10 +63,8 @@ Thus:
 % We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
 % Teams have been added as extra rows with an extra column for delineation, but there might be a better presentation format.
 
+\begin{table}
 \begin{longtable}[]{@{}lll@{}}
-
-% This doesn't seem to be the right syntax for a caption
-% \caption{The level 2 and level 3 elements of the Rubin Operations work breakdown structure}
 
 \hline
 L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
@@ -120,6 +118,10 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 % footnote text
 \footnotetext[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
 \end{longtable}
+% This doesn't seem to be the right syntax for a caption
+\caption{The level 2 and level 3 elements of the Rubin Operations work breakdown structure.}
+\label{tab:wbs}
+\end{table}
 
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
@@ -156,7 +158,7 @@ The Rubin Operations partners, SLAC and NOIRLab, may have different definitions 
 
 In general, staff in Rubin Operations roles at a given expected full-time equivalent (FTE) effort level are expected to devote that fraction of their total work time to \RO.
 
-Staff in ``scientist'' or ``engineer'' roles can allocate up to 2 \% of their time to training, 2 \% to administrative activities and 1 \% to outreach and DEI activities.
+Staff in ``scientist'' or ``engineer'' roles can allocate up to 2\% of their time to training, 2\% to administrative activities and 1\% to outreach and DEI activities.
 % I have heard it said that staff has up to 3% for Outreach and DEI but I don't know how that resolves to the budget numbers described in the previous sentence
 % Perhaps we just roll it all up into 5%, but it's a good place to reiterate that staff *are expected* to spend time on DEI 
 
@@ -165,6 +167,7 @@ That is, scientists are expected to devote 1,440 hours per
 year to operations activity, and the remainder of their time to personal research.
 % Some scientists are 50% 
 
+% Confirmation on how we will be having staff charge for ES/RSS budgeted time in FY22 will be needed.  One suggestion is to not worry about this until FY23 when staff are contributing more than 50% of their time to NOIRLab.
 Personal research time is charged to a NOIRLab's Research and Science Services (RSS) project code and is prorated for staff who are fractionally allocated to Rubin Operations. 
 Training, administrative, and outreach and DEI time is charged to either RSS or ES depending on where staff will move into NOIRLab (RSS or ES). 
 Functional Managers will ensure the proper project codes are available on your timecard.
@@ -194,8 +197,8 @@ Thus, we expect developers and scientists to produce 26.25 and 21 \glspl{SP} per
           & \multicolumn{2}{c}{Hours} & \multicolumn{1}{c}{\glspl{SP}} \\
           & Per year & Per month      & Per month \\
 \hline
-Full-time Developer (ES) & 1800     & 105            & 26.25 \\
-Full-time Scientist (RSS) & 1440     &  84            & 21.00 \\
+Full-time Developer & 1800     & 105            & 26.25 \\
+Full-time Scientist & 1440     &  84            & 21.00 \\
 \hline
 \end{longtable}
 \caption{Expected working rates for developers and scientists. Technicians and engineers follow the same rates as developers.}
