--- a/body.tex
+++ b/body.tex
@@ -57,13 +57,12 @@ Rubin is level 1 of the WBS, the departments are level 2, and teams within the d
 Individual roles in operations are defined at the lowest level.
 % In the Planning Google sheets there is no level 4 as there is in the budget table in the Proposal, but there is a direct mapping in that it's rolled up.  We can decide whether to change the google tools to match the proposal budget tables (will help later with reconcilation), or we can make the mapping clearly described.  Also, in Google sheets 1.10 and 1.11 are rolled into Program Operations, and they are separate elements in this table, and in the budget tables.
 
-
-Thus:
+This table shows the level 2 and level 3 elements of the Rubin Operations work breakdown structure.
 
 % We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
 % Teams have been added as extra rows with an extra column for delineation, but there might be a better presentation format.
 
-\begin{table}
+% \begin{table}
 \begin{longtable}[]{@{}lll@{}}
 
 \hline
@@ -118,10 +117,10 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 % footnote text
 \footnotetext[1]{Program Operations is made up of several groups at level 4 that are not presented here but are available for activity planning and budgeting.}
 \end{longtable}
-% This doesn't seem to be the right syntax for a caption
-\caption{The level 2 and level 3 elements of the Rubin Operations work breakdown structure.}
-\label{tab:wbs}
-\end{table}
+% Using a caption needs the "table" environment currently commented
+% \caption{The level 2 and level 3 elements of the Rubin Operations work breakdown structure.}
+% \label{tab:wbs}
+% \end{table}
 
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
