--- a/body.tex
+++ b/body.tex
@@ -62,6 +62,8 @@ This table shows the level 2 and level 3 elements of the Rubin Operations work b
 % We want to add the next level down in this tables (include Teams). No need to refer to NOIRLab's WBS for Rubin.
 % Teams have been added as extra rows with an extra column for delineation, but there might be a better presentation format.
 
+% This table is not auto-numbered and the next table is numbered "3" so this will have to be figured out.
+
 % \begin{table}
 \begin{longtable}[]{@{}lll@{}}
 
@@ -372,8 +374,9 @@ Be aware that: (Amanda: I don't think all of the following bullets are true or n
 
 Although it is possible---indeed, encouraged---to set the \texttt{assignee} field in \gls{JIRA} to the individual who is expected to carry out the bulk of the work in an \gls{epic}, this does not provide sufficient granularity for those cases when more than one person will be contributing.
 
-In fact, it is only required to provide a staff assignment in terms of ``resource types'' (i.e. scientists, senior scientists, developers, senior developers, etc).
-In practice, to ensure your team is evenly loaded, it is usually necessary to break it down to named individuals.
+% I don't see how this is done in Jira - Assignee only takes user names.  Do we want to be able to track resources or loading?  How is DM doing this in Jira now?
+% In fact, it is only required to provide a staff assignment in terms of ``resource types'' (i.e. scientists, senior scientists, developers, senior developers, etc).
+% In practice, to ensure your team is evenly loaded, it is usually necessary to break it down to named individuals.
 
 
 \subsubsection{Scheduling Research Work} \label{sec:research}
