--- a/body.tex
+++ b/body.tex
@@ -75,8 +75,8 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 1 & & Rubin Director's Office  \tabularnewline
   & 1.1 & Director's Office  \tabularnewline
   & 1.2 & Safety  \tabularnewline
-  & 1.3 & Program Operations  \tabularnewline
-%  & 1.3.1 & Program Operations\footnotemark[1]  \tabularnewline
+  & 1.3 & Program Operations\footnotemark[1]  \tabularnewline
+%  & 1.3.1 & Program Operations  \tabularnewline
 %  & 1.3.2 & Administrative Operations  \tabularnewline
 %  & 1.3.3 & Portfolio Management  \tabularnewline
 %  & 1.3.4 & Communications  \tabularnewline
