--- a/body.tex
+++ b/body.tex
@@ -438,7 +438,7 @@ There are two \gls{JIRA} issue types that are used for planning work on epics: S
 % bug - how are bug reports and feature requests accepted and assigned to epics?
 % task/subtask - not sure these are used
 
-\subsection{Defining Stories}
+\subsubsection{Defining Stories}
 \label{sec:defining-stories}
 
 Epics have already been defined as part of the \gls{cycle} plan (see \S\ref{sec:planning-epics}).
@@ -464,8 +464,8 @@ It is therefore possible to over- or under-load an \gls{epic}.
 This will have obvious ramifications for the schedule.
 After execution is complete, comparing the total number of SP on planned stories in an epic to the number of SP on the epic itself affords the opportunity to refine time estimates going forward. 
 
-\subsection{Handling Bugs \& Emergent Work}
-\label{sec:bugs}
+%\subsection{Handling Bugs \& Emergent Work}
+%label{sec:bugs}
 
 \subsubsection{Receiving Bug Reports}
 \label{receiving-bug-reports}
