--- a/body.tex
+++ b/body.tex
@@ -576,19 +576,19 @@ for servicing user requests (e.g. providing developer support).
 \subsection{Closing Epics}
 \label{sec:epic-close}
 
-\subsubsection{Completing the Work}
-\label{sec:epic-done}
+%\subsubsection{Completing the Work}
+%\label{sec:epic-done}
 
-An \gls{epic} may be marked as \texttt{done} when:
+An \gls{epic} is considered complete and may be marked as \texttt{done} when:
 
 \begin{enumerate}
 \item It contains at least one completed \gls{story};
 \item There are no more incomplete \glspl{story} defined within it;
 \item There are no plans to add more \glspl{story};
 \item (If applicable, i.e. it is not a bucket, as defined in \S\ref{sec:bucket}) its concrete deliverable has been achieved.
-\item ``Bucket'' epics should be closed at the end of the time box (i.e. end of half fiscal year and end of fiscal year)
 \end{enumerate}
 
+``Bucket'' epics should be closed at the end of the time box (i.e. end of half fiscal year and end of fiscal year).
 Note that it is not permitted to close an \gls{epic} without defining at least one \gls{story} within it.
 Empty \glspl{epic} can never be completed.
 
