--- a/body.tex
+++ b/body.tex
@@ -217,7 +217,7 @@ In this case, the ratio of hours to \glspl{SP} increases, but the number of hour
 Note that specific activities related to ``onboarding'' and getting up to speed with operations can be ticketed as regular work.
 For example, working through tutorials, reading documentation, and so on are all activities which can earn \glspl{SP}.
 
-\subsubsection{Technical Managers and other Leadership Roles}
+\subsubsection{Team Leads and other Leadership Roles}
 
 Individuals in leadership roles may find it necessary to assign a larger fraction of their time to \gls{LOE} type work, and therefore spend fewer hours generating \glspl{SP}.
 The ratio of hours to \glspl{SP} remains constant, but the number of hours decreases.
@@ -230,10 +230,10 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
 The authoritative, high-level summary of the long-term planning system may be found in any POP process document.
 
 Here we expand upon the details of that system.
-The plan for pre-operations and Survey Operations is embodied in:
+The plan for Pre-Operations and Survey Operations is embodied in:
 
 \begin{enumerate}
-    \item A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations, availability of specific functionality, or maintenance event for the telescope system.
+    \item A set of \emph{milestones}, each of which represents the delivery of a major aspect of Rubin Operations, availability of specific functionality, or maintenance event for the telescope system.
         Milestones are planned in Smartsheet and then officially defined in a \gls{JIRA} milestone issue.
     \item A series of \emph{epics} describe major pieces of work.
         Epics are associated with concrete, albeit high-level, deliverables or outcomes that culminate in the achievement of the above milestones, and have specific resource loads (staff assignments story point values) and end dates.
