--- a/body.tex
+++ b/body.tex
@@ -260,11 +260,11 @@ Level 1 and 2 milestones are under change control once they are defined and desc
 
 Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is important: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
-Epics should work to achieve milestones i.e. they may be blocking issues on the milestones.
+Epics should work to achieve milestones, i.e., they may be blocking issues on the milestones.
 When a detailed description of work for a given \gls{epic} is known, it is described in \gls{JIRA}.
 It should then be assigned to the appropriate \glspl{cycle}.
 
-Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points in \gls{JIRA} epics and rolling up the total progress.
+Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points on linked issues in \gls{JIRA} epics and rolling up the total progress.
 To ensure success, \gls{JIRA} epics must be completely detailed out prior to a full 6-month cycle and total effort should be estimated out for an entire fiscal year of effort, as detailed below.
 
 \subsection{Planning Research Work}
@@ -272,7 +272,7 @@ To ensure success, \gls{JIRA} epics must be completely detailed out prior to a f
 
 In order for \RO  to reach its science goals, new algorithmic or engineering approaches must sometimes be researched.
 It is appropriate to budget time for this research work in planning packages.
-
+% how are teams doing this?  We at least need to say it needs to be planning in an epic.  I think planning package is a relic from Construtcion.
 
 \subsection{Epic-Based Long Term Plans}
 
@@ -288,7 +288,7 @@ carefully controlled.
 
 \subsection{Defining the Schedule with Milestones}
 
-Rubin Milestones are defined as \gls{JIRA} issues of type ``Milestone''. As indicated above, the Director (or their designate) defines the L1 milestones, the Associate Directors (ADs) define their departments' L2 milestones, and the Team Leaders and ADs define the L3 milestones for their teams.
+Rubin Milestones are defined as \gls{JIRA} issues of type ``milestone''. As indicated above, the Director (or their designate) defines the L1 milestones, the Associate Directors (ADs) define their departments' L2 milestones, and the Team Leaders and ADs define the L3 milestones for their teams.
 
 L1, L2 and most L3 milestones are defined as part of the annual planning cycle, and prior to the year in which the work associated with them is due to be carried out. ADs and Team Leaders communicate their milestones to the Program Coordinator, who enters them into Smartsheet and then creates a \gls{JIRA} issue of type ``milestone'' for each one.
 
@@ -296,18 +296,19 @@ During the year, it is sometimes necessary to create new milestones (primarily a
 
 The following fields must be filled out when defining a new milestone:
 \begin{itemize}
-\item The \texttt{Milestone Level}, ``1,'' ``2,'' or ``3;''
+\item The \texttt{Milestone Level}, ``1,'', ``2,'' or ``3;''
 \item The \texttt{RO Milestone ID}.
-  This is a string like ``L2-DI-0003'' which indicates the level of the milestone, the department (for level 2 milestones) or team (for level 3 milestones) that owns it, and an ID number that serves to make the ID unique wbut which otherwise carries no meaning.
+  This is a string like ``L2-DI-0003'' which indicates the level of the milestone, the department (for level 2 milestones) or team (for level 3 milestones) that owns it, and an ID number that serves to make the ID unique but which otherwise carries no meaning.
   The list of two-character department and team string identifiers can be found in the Appendix (``DI'' in the example stands for ``Directorate'').
   The ID number may get edited by the Director's Office to ensure that it is unique: the Milestone IDs are only ever used in linking together the milestones for visualization in Smartsheet.
   Good practice here is to look at the milestone list in Smartsheet and choose an ID number that leads to a milestone ID that has not already been taken, and which roughly fits the milestone into the time-ordered list.
-\item The \texttt{Summary} field should contain a sentence outlining either what needs to be done, or what will be delivered for the Milestone to be reached.
+\item The \texttt{Summary} field is equivalent to the activity that will take place in order to produce the deliverable and meet the milestone.  It should contain a sentence outlining either what needs to be done, or what will be delivered for the milestone to be reached. In the POP document this is the "Activity".
   Examples include \textit{``Deliver Data Preview 0.1 (DP0.1)''} (an L1 milestone) and \textit{``DP0.1 Data Release: science-ready catalogs released from the IDF''} (an L2 milestone that belongs to it).
-\item The \texttt{Activity Description} text should contain one or maybe two sentences summarizing the activity needed to complete the milestone.
+\item The \texttt{Description} text should contain one or maybe two sentences summarizing the activity needed to complete the milestone.
   Example: \textit{``Upgrade the WBS activity, labor and non-labor plans from V4 to V5 in order to capture a US DF at SLAC, a UK DF, and any other modifications needed, and estimate the corresponding budget.''}
   Note that only L1 (and sometimes L2) milestones are actually listed in the NOIRLab Program Operations Plan (POP), but Rubin adopts the same structure for all its milestones.
-\item The \texttt{Deliverable Description} is a very terse list of the deliverables needed to reach the Milestone.
+\item The \texttt{POP Milestone} is concise description of the when the milestone is reached.
+\item The \texttt{POP Deliverable} is a very terse list of the deliverables needed to reach the milestone.
   Example: \textit{``V5 WBS workbook and Preliminary Cost Calculator.''}
 \item The \texttt{Due Date} is the latest date in the future by which the milestone needs to be reached.
   This date should be before or the same as the milestone's parent milestone's ``Rubin Forecast Due Date'' as shown in the Smartsheet.
@@ -316,6 +317,7 @@ The following fields must be filled out when defining a new milestone:
 \end{itemize}
 
 The Program Coordinators will ensure that the milestones that have been defined are correctly linked together in the Smartsheet, so that their epics appear nested beneath them.
+% Should we describe the difference between Planning and Tracking sheets here?
 
 
 \section{Short Term Planning} \label{sec:cycle-plan}
