--- a/body.tex
+++ b/body.tex
@@ -227,6 +227,8 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
 \section{Long Term Planning}
 \label{sec:long-term-plan}
 
+\subsubsection{Components of Annual Planning}
+\label{sec:annual-planning}
 The authoritative, high-level summary of the long-term planning system may be found in any POP process document.
 
 Here we expand upon the details of that system.
