--- a/body.tex
+++ b/body.tex
@@ -298,18 +298,19 @@ During the year, it is sometimes necessary to create new milestones (primarily a
 
 The following fields must be filled out when defining a new milestone:
 \begin{itemize}
-\item The \texttt{Milestone Level}, ``1,'', ``2,'' or ``3;''
+\item The \texttt{Milestone Level}, ``1,'' ``2,'' or ``3;''
 \item The \texttt{RO Milestone ID}.
   This is a string like ``L2-DI-0003'' which indicates the level of the milestone, the department (for level 2 milestones) or team (for level 3 milestones) that owns it, and an ID number that serves to make the ID unique but which otherwise carries no meaning.
   The list of two-character department and team string identifiers can be found in the Appendix (``DI'' in the example stands for ``Directorate'').
   The ID number may get edited by the Director's Office to ensure that it is unique: the Milestone IDs are only ever used in linking together the milestones for visualization in Smartsheet.
   Good practice here is to look at the milestone list in Smartsheet and choose an ID number that leads to a milestone ID that has not already been taken, and which roughly fits the milestone into the time-ordered list.
-\item The \texttt{Summary} field is equivalent to the activity that will take place in order to produce the deliverable and meet the milestone.  It should contain a sentence outlining either what needs to be done, or what will be delivered for the milestone to be reached. In the POP document this is the "Activity".
+\item The \texttt{Summary} field is equivalent to the activity that will take place in order to produce the deliverable and meet the milestone.  It should contain a sentence outlining the activity to be performed in order for the milestone to be reached and the deliverable to be produced. In the POP document tables this is the "Activity".
   Examples include \textit{``Deliver Data Preview 0.1 (DP0.1)''} (an L1 milestone) and \textit{``DP0.1 Data Release: science-ready catalogs released from the IDF''} (an L2 milestone that belongs to it).
-\item The \texttt{Description} text should contain one or maybe two sentences summarizing the activity needed to complete the milestone.
+\item The \texttt{Description} text should contain more information detailing the scope of activity needed to complete the milestone.
   Example: \textit{``Upgrade the WBS activity, labor and non-labor plans from V4 to V5 in order to capture a US DF at SLAC, a UK DF, and any other modifications needed, and estimate the corresponding budget.''}
   Note that only L1 (and sometimes L2) milestones are actually listed in the NOIRLab Program Operations Plan (POP), but Rubin adopts the same structure for all its milestones.
 \item The \texttt{POP Milestone} is concise description of the when the milestone is reached.
+Example: \textit{``V5 WBS workbook and Preliminary Cost Calculator implementation complete.''}
 \item The \texttt{POP Deliverable} is a very terse list of the deliverables needed to reach the milestone.
   Example: \textit{``V5 WBS workbook and Preliminary Cost Calculator.''}
 \item The \texttt{Due Date} is the latest date in the future by which the milestone needs to be reached.
